<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">d-day</string>
    <string name="action_settings">Settings</string>
    <string name="plsWait">Please wait..</string>
    <string name="delete">Delete</string>
    <string name="emptyList">Empty list</string>
    <string name="detail">Detail</string>
    <string name="date">Date</string>
    <string name="mnu_license">License</string>
    
    <!-- main fragment -->
    <string name="today">TODAY</string>

    <!-- add fragment -->
    <string name="addSchedule">Add a schedule</string>
    <string name="done">done</string>
    <string name="inputs">Inputs</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="reminder">Reminder</string>
    <string name="alarm">Alarm</string>
    <string name="none">None</string>
    <string name="year">Year</string>
    <string name="day100">100 Days</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <string name="plsInsertDate">Please insert date.</string>
    <string name="plsInsertTitle">Please insert title.</string>

</resources>