<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/cm_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ececec"
        android:orientation="vertical"
        android:padding="10dp" >

        <EditText
            android:id="@+id/eventTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="@drawable/edt_bg"
            android:hint="@string/title"
            >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/eventDate"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/date"            
             />

        <EditText
            android:id="@+id/eventDescription"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:hint="@string/description"
            android:gravity="top"
            android:padding="10dp"
            android:background="@drawable/edt_bg"
             />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reminder"            
             />

        <RadioGroup
            android:id="@+id/eventTypeGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year"
                style="@style/radio"
                 />
            
            <RadioButton
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month"
                style="@style/radio"
                 />
            
            <RadioButton
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day100"
                style="@style/radio"
                 />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>